2002-02-21  Matthias Clasen  <maclas@gmx.de>

	* docs/tutorial/images/*.png: screenshots of examples.
	
	* docs/tutorial/gtk-tut.sgml: remove deprecated widgets, add
	screenshots, fix chapters 1-4 for GTK+ 2.0. 

	* demos/gtk-demo/Makefile.am (INCLUDES): add -DGDK_PIXBUF_DISABLE_DEPRECATED.

Thu Feb 21 00:31:41 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkspinbutton.c: Many cleanups and fixes. Draw exclusively
	in expose handler. Feedback when buttons are depressed.

	* gtk/gtkstyle.c: update for changes in gtkspinbutton.c. Fix
	spinbuttons for RTL langauges.

Wed Feb 20 23:00:08 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtkstyle.c: new radio buttons. handle inconsistent state for
	check- and radiobuttons.

	* gtk/theme-bits/check-13-inconsistent.png,
	gtk/theme-bits/radio-13-inconsistent.png: new files

	* gtk/theme-bits/radio-13.png: new radio buttons

	* gtk/theme-bits/Makefile.am (EXTRA_DIST): add new
	-inconsistent.png files

Wed Feb 20 16:19:49 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkevents-x11.c: Add a XSETTING mapping for
	gtk-can-change-accels. (#70218, Thomas Leonard.)

2002-02-20  Sven Neumann  <sven@gimp.org>

	* gtk/gtkcolorsel.c (gtk_color_selection_finalize): check
	handler_id before disconnecting the signal handler since it might
	have never been connected if the GtkColorSelection is destroyed
	before it was realized.

2002-02-20  Matthias Clasen  <maclas@gmx.de>

	* docs/tutorial/gtk-tut.sgml: Fold back Svens g_signal fixes from
	the examples.  

	* docs/tutorial/gtk-tut.sgml, examples/progressbar/progressbar.c,
	examples/progressbar/Makefile: Make the progressbar example 
	deprecation-clean.

Tue Feb 19 22:10:59 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_mnemonic_activate): new
	function
	(gtk_tree_view_column_create_button): use g_signal_* instead of
	gtk_signal_*, hook up _mnemonic_activate callback
	(gtk_tree_view_column_update_button): use